--- a/start-web/index.html
+++ b/start-web/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- 
+        Copyright 2014 Git.Training
+    -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
