mb before rebase confilict

--- a/start-web/index.html
+++ b/start-web/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <!-- 
         Copyright 2014 Git.Training
+        
+        Adding change before rebaseing conflicts
     -->
 <head>
     <meta charset="UTF-8">
