Master: text update

--- a/start-web/index.html
+++ b/start-web/index.html
@@ -3,7 +3,7 @@
     <!-- 
         Copyright 2014 Git.Training
         
-        Adding change before rebaseing conflicts
+        Master: Xoa text
     -->
 <head>
     <meta charset="UTF-8">
