bigTrouble: change text

--- a/start-web/index.html
+++ b/start-web/index.html
@@ -3,7 +3,7 @@
     <!-- 
         Copyright 2014 Git.Training
         
-        Master: Xoa text
+        bigTrouble: text bigTrouble ne
     -->
 <head>
     <meta charset="UTF-8">
