--- a/start-web/index.html
+++ b/start-web/index.html
@@ -41,6 +41,6 @@
 
     <div>them tiep</div>
 
-    <div>Copyright 2017 Text update sau</div>
+    <div>Copyright 2017 Text update sau Sua online</div>
 </body>
 </html>
