--- a/start-web/index.html
+++ b/start-web/index.html
@@ -9,10 +9,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fast forward test</title>
+    <title>Stash Git example</title>
 </head>
 <body>
-    <p>Limit Comparson</p>
+    <p>Stash for task</p>
     <p>Limit Comparson</p>
     <p>Limit Comparson</p>
     <p>Limit Comparson</p>
